# uHDA

./: .gitignore  README.md  meson.build  uhda.cmake
include/uhda/: kernel_api.h  simple.h  types.h  uhda.h
src/: codec.cpp  codec.hpp  controller.cpp  controller.hpp  fmt_utils.hpp  lock_guard.hpp  reg.hpp  scope_guard.hpp  simple.cpp  spec.hpp  stream.cpp  stream.hpp  uhda.cpp  utils.hpp  vector.hpp  widget.hpp
